BUGFIX: SidebarLayout, left alignment looks better now

--- a/jetstream/static/jetstream/css/blocks/column-sidebar.less
+++ b/jetstream/static/jetstream/css/blocks/column-sidebar.less
@@ -1,8 +1,19 @@
 .sidebar-layout {
   .sidebar {
     height: auto;
-    margin-left: 25px;
     margin-bottom: 40px;
+  }
+
+  &.right .sidebar {
+    margin-left: 25px;
+  }
+
+  &.left .sidebar {
+    margin-right: 25px;
+  }
+
+  &.left .rich-text {
+    margin-left: 200px;
   }
 
   .rich-text {
